Feature add turkish intensive page

--- a/pages/turkish/turkishStyles/TurkishHeroSection.scss
+++ b/pages/turkish/turkishStyles/TurkishHeroSection.scss
@@ -27,7 +27,7 @@ $mfsp: 14px;
             rgba(255, 247, 234, 0.05) 0%,
             rgba(255, 247, 234, 0.99) 100%
         ),
-        url('../../public/img/bg.webp');
+        url('../../../public/img/bg.webp');
     background-size: cover;
 
     h1 {
