--- a/pages/turkish/turkishStyles/TurkishButtonToMain.scss
+++ b/pages/turkish/turkishStyles/TurkishButtonToMain.scss
@@ -1,25 +1,39 @@
-.button-to-main {
-    width: fit-content;
+.button-to-main-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    padding: 0 0 2rem;
 
-    text-align: center;
+    width: 100%;
 
-    font-size: 0.75rem;
-    font-weight: 500;
-    margin: 0.5rem 0;
+    .button-to-main {
+        margin-left: 60px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 0.9rem;
+        line-height: 120%;
+        letter-spacing: -0.03em;
 
-    border-radius: 20px;
+        color: rgb(47, 47, 47);
 
-    color: white;
-    background-color: #856d47;
-    padding: 0.6rem;
-    border: 0;
+        position: relative;
 
-    transition: background-color 0.5s linear;
+        &:before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2.5px;
+            border-radius: 4px;
+            background: linear-gradient(#856d47, #d4c6ae);
+            bottom: -5px;
+            left: 0;
+            transform-origin: right;
+            transform: scaleX(0);
+            transition: transform 0.3s ease-in-out;
+        }
 
-    &:hover {
-        background-color: #a88a5a;
+        &:hover::before {
+            transform-origin: left;
+            transform: scaleX(1);
+        }
     }
 }
