--- a/styles/MyServices.scss
+++ b/styles/MyServices.scss
@@ -1,5 +1,5 @@
 .services {
-    margin-bottom: 6.25rem;
+    margin-bottom: 3rem;
 
     section {
         display: flex;
@@ -19,14 +19,24 @@
             font-size: 1rem;
             font-weight: 500;
             line-height: 1.5;
+
+            margin-bottom: 1rem;
+        }
+
+        h3 {
+            font-size: 0.75rem;
+            font-weight: 500;
+            line-height: 1.5;
+
+            margin-bottom: 0.5rem;
         }
 
         p,
-        ul,
-        h3 {
+        ul {
             font-size: 0.75rem;
             font-weight: 300;
             line-height: 1.5;
+            margin-bottom: 0.5rem;
         }
 
         li {
@@ -55,8 +65,7 @@
     margin-left: auto;
     margin-right: auto;
 
-    width: 731px;
-    height: 310px;
+    max-width: 731px;
 
     opacity: 0;
 
@@ -84,8 +93,7 @@
         justify-content: space-between;
 
         p {
-            width: 320px;
-            height: 195px;
+            max-width: 320px;
         }
 
         h3 {
@@ -95,8 +103,7 @@
 }
 
 .consultation-for-repetitors {
-    width: 530px;
-    height: 460px;
+    max-width: 530px;
     margin-right: 5px;
 
     opacity: 0;
@@ -118,8 +125,7 @@
     }
 
     p {
-        width: 452px;
-        height: 335px;
+        max-width: 452px;
     }
 
     &__flex-container {
@@ -129,8 +135,7 @@
 }
 
 .consultation-for-specific-requests {
-    width: 530px;
-    height: 228px;
+    max-width: 530px;
 
     opacity: 0;
 
@@ -151,13 +156,11 @@
     }
 
     &__flex-container {
-        width: 475px;
-        height: 84px;
+        max-width: 475px;
     }
 }
 .telegram-with-helpful-information {
-    width: 530px;
-    height: 228px;
+    max-width: 530px;
 
     opacity: 0;
 
@@ -180,14 +183,18 @@
     &__flex-container {
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        gap: 0.5rem;
     }
 
     &__button {
+        width: 50px;
+        height: 50px;
+
+        padding: 0.4rem;
+
         background-color: #fff7ea;
         border-radius: 20px;
 
-        padding: 0.6rem;
         border: 0;
         transition: background-color 0.5s linear;
 
@@ -197,8 +204,7 @@
     }
 }
 .checklist-for-card-games {
-    width: 530px;
-    height: 228px;
+    max-width: 530px;
 
     opacity: 0;
 
@@ -221,12 +227,12 @@
     &__button {
         display: block;
 
-        width: 110px;
+        max-width: 110px;
         text-align: center;
 
         font-size: 0.75rem;
         font-weight: 500;
-        margin: 0.5rem 0;
+        margin-bottom: 1rem;
 
         background-color: #fff7ea;
         border-radius: 20px;
@@ -245,8 +251,7 @@
 }
 
 .checklist-with-useful-stuff {
-    width: 530px;
-    height: 228px;
+    max-width: 530px;
 
     opacity: 0;
 
@@ -267,8 +272,7 @@
     }
 }
 .telegram-with-textbooks-and-materials {
-    width: 530px;
-    height: 460px;
+    max-width: 530px;
     margin-left: 5px;
 
     opacity: 0;
@@ -300,12 +304,12 @@
     margin-right: auto;
 
     width: 731px;
-    height: 445px;
 
     opacity: 0;
 
     h2 {
         text-align: center;
+        margin-bottom: 1rem;
     }
 
     &.__animations {
@@ -321,6 +325,49 @@
                 transform: translate3d(0px, 0px, 0px) rotateX(0deg)
                     rotateY(0deg);
             }
+        }
+    }
+}
+
+.translations {
+    margin: 0 auto;
+
+    max-width: 731px;
+
+    p {
+        margin-bottom: 0.5rem;
+    }
+
+    h2 {
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+
+    h3 {
+        margin-bottom: 0.2rem;
+    }
+
+    &__button {
+        display: block;
+        max-width: 8rem;
+        text-align: center;
+
+        font-size: 0.75rem;
+        font-weight: 500;
+        margin-bottom: 1rem;
+
+        background-color: #fff7ea;
+        border-radius: 20px;
+
+        color: #2f2f2f;
+
+        padding: 0.6rem;
+        border: 0;
+
+        transition: background-color 0.5s linear;
+
+        &:hover {
+            background-color: #d5cdc2;
         }
     }
 }
